fixed styling issues with how the logo and navbar looked on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,3 +55,13 @@ body {
   right: 20px;
   width: 285px;
 }
+
+@media (max-width: 454px) {
+  #app-container {
+    margin-top: 50px;
+  }
+
+  #trans-col {
+    margin-bottom: 20px;
+  }
+}
